--- a/Telugucoders/lang/langs/en.yml
+++ b/Telugucoders/lang/langs/en.yml
@@ -9,7 +9,7 @@ owner_btn : "مطۅࢪ بۅت ."
 lang_btn : "ݪغة بۅت ."
 alive_start : "شغال وما اوكف ، عني يابه عني ."
 close_btn : "- اެمِسِحِ"
-repo_btn : "- سورس بوت مطور فريدوم"
+repo_btn : "- سورس بوت مطور تيبثون"
 source : "- السورس"
 help_button : "- لك بعض الاوامر التي ادعمها 🤎.\n\n"
 owner_cmds : "- اۅامࢪ اݪمطۅࢪ الاساسي"
@@ -18,7 +18,7 @@ user_cmds : "- اۅامࢪ اݪمشࢪفين"
 back_home : "• ࢪجۅع"
 ghelp_text : "- اوامر مساعدة بسيطة الك" 
 ghelp_btn : "- لك مو تدلل دوس عليها"
-uptime_btn : "**- مطورين البوت :\n - الوقت: {}\n- المطورين : {}\n- وقت التشغيل - وقت البوت: {}\n- مطور السورس : @RR8R9**"
+uptime_btn : "**- مطورين البوت :\n - الوقت: {}\n- المطورين : {}\n- وقت التشغيل - وقت البوت: {}\n- مطور السورس : @nunuu**"
 
 #plugins - admins.py
 reload_btn : "**✅- تم تحديث البوت\n✅- تم تحديث قاعدة البيانات\n╰- اكتمل التحديث بواسطة : {}**"
